--- a/group-project/package.json
+++ b/group-project/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
