--- a/group-project/package.json
+++ b/group-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
+    "phaser": "^3.70.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
