--- a/group-project/package.json
+++ b/group-project/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.21.1",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
