--- a/group-project/package.json
+++ b/group-project/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^3.9.1",
     "phaser": "^3.70.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
